update font and add new file

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
             <div class="row">
                 <div class="col-lg-6 col-md-6 text-center text-md-left">
-                    <p><i class="fas fa-clock"></i>Mở cửa: 7h30 - 20h30</p>
+                    <p><i class="fas fa-clock"></i>Giờ mở cửa: 7h30 - 20h30</p>
                 </div>
                 <div class="col-lg-6 col-md-6 text-center text-md-right header-top-right">
                     <ul>
@@ -213,7 +213,7 @@
                             <figcaption>
                                 <div class="content">
                                     <div class="container inner-content text-left">
-                                        <h3>Chào mừng bạn đến với NAILXINH</h3>
+                                        <h3>Chào mừng bạn đến với Nail Xinh</h3>
                                         <h1>DỊCH VỤ LÀM MÓNG</h1>
                                         <p>Là dịch vụ được yêu thích nhất tại NAIL XINH, với những mẫu nail hot trend, luôn đi
                                             đầu xu hướng</p>
@@ -379,7 +379,7 @@
     <section id="portfolio" class="section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 offset-lg-3 col-12 text-center">
+                <div class="col-lg-8 offset-lg-2 col-12 text-center">
                     <div class="section-title">
                         <h2>SẢN PHẨM CỦA CHÚNG TÔI</h2>
                         <hr>
@@ -601,7 +601,7 @@
     <section id="beauticians" class="section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 offset-lg-3 col-12 text-center">
+                <div class="col-lg-8 offset-lg-2 col-12 text-center">
                     <div class="section-title">
                         <h2>GẶP MẶT CÁC CHUYÊN GIA</h2>
                         <hr>
